--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Build
         run: go build -v ./...
 
+      - name: Test
+        run: go test -v ./...
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
